--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,9 @@
   --gray-900: #121214;
 
   --green-300: #00B37E;
-  --green-500: #00875f
+  --green-500: #00875f;
+
+  --red-500: #F75A68;
 }
 
 :focus {
