--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,14 @@
   gap: 2rem;
   align-items: flex-start;
 }
+
+/* quando a tela for < 768px */
+@media (max-width: 768px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+}
